--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             font-size: 1em;
             opacity: 0.8;
         }
-    </style>.botao {
+    .botao {
     margin-top: 25px;
     padding: 40px 60px;          /* aumenta a área clicável */
     font-size: 2.5em;            /* texto MUITO maior */
@@ -75,6 +75,7 @@
     cursor: pointer;
     font-weight: bold;
     box-shadow: 0 8px 25px rgba(0,0,0,0.35);
+        </style>
 }
 
 .botao:hover {
@@ -137,4 +138,5 @@ function tocarMusica() {
 
 
 </html>
+
 
